# next-socks5

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  config.example.toml  install.sh
.github/workflows/: build.yml
docs/: PERFORMANCE.md
docs/research/: rfc-1928-1929-compliance.md  socks5-performance-benchmarks.md
docs/superpowers/plans/: 2026-06-03-remote-tui-attach.md  2026-06-03-socks5-server.md  2026-06-05-udp-port-range-and-advertise.md
docs/superpowers/specs/: 2026-06-03-remote-tui-attach-design.md  2026-06-03-socks5-server-design.md  2026-06-05-udp-port-range-and-advertise-design.md
landing/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
landing/scripts/: generate-og.mjs
landing/src/: consts.ts
landing/src/components/: Config.astro  Dashboard.astro  Features.astro  Footer.astro  Hero.astro  Install.astro  Logo.astro  Nav.astro  Performance.astro
landing/src/layouts/: Layout.astro
landing/src/pages/: index.astro
landing/src/styles/: global.css
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  mock.rs
src/admin/: client.rs  mod.rs  ring.rs  server.rs
src/protocol/: address.rs  handshake.rs  mod.rs  reply.rs  request.rs  udp.rs
src/server/: admission.rs  connect.rs  connection.rs  mod.rs  udp.rs
src/tui/: mod.rs  widgets.rs
tests/: admin_attach.rs  integration.rs  reproductions.rs
tests/scripts/: README.md  bench.sh  run_all.sh  smoke_connect.sh  smoke_udp.sh  socks5_cps.go  socks5_udp.go
