[package]
name = "next-socks5"
version = "0.1.0"
edition = "2021"

[lib]
name = "next_socks5"
path = "src/lib.rs"

[[bin]]
name = "next-socks5"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "io-util", "time", "sync", "macros", "signal"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
