[package]
name = "next-socks5"
version = "0.3.0"
edition = "2021"

[lib]
name = "next_socks5"
path = "src/lib.rs"

[[bin]]
name = "next-socks5"
path = "src/main.rs"

[features]
default = ["tui"]
# Optional terminal dashboard. Disabling it produces a headless-only build that
# drops the ratatui/crossterm dependency trees.
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "io-util", "time", "sync", "macros", "signal"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
postcard = { version = "1", features = ["use-std"] }
